# bib

./: README.md
chris_bibtex_manager/: README.md  pyproject.toml
chris_bibtex_manager/src/bibtexmanager/: cli.py
