[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bibtexmanager"
version = "0.0.1"
description = "CLI to organize BibTeX entries."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Christopher Priebe" }]
dependencies = ["bibtexparser>=2.0.0b8,<3"]

[project.scripts]
managebib = "bibtexmanager.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
